Fix UTF-8 encoding issue